# mir-semantics

./: .cruft.json  .dockerignore  .flake8  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.kmir  LICENSE  Makefile  README.md  WORKSPACE.bazel  flake.nix  k.bzl  llvm_run  nix-tests.sh  pyproject.toml  result  run-tests.sh  rust-toolchain.toml  sum.py  verify_add1.py
kmir/: .cruft.json  .env  .gitignore  Makefile  README.md  build_glr.sh  check_k_version.sh  doit.sh  flake.nix  kbuild.toml  pyproject.toml  set_env.sh
kmir/k-src/: mir-assert.md  mir-basicblock.md  mir-configuration.md  mir-identifiers.md  mir-lexer-syntax.md  mir-operand.md  mir-place-syntax.md  mir-place.md  mir-rvalue-eval.md  mir-rvalue-syntax.md  mir-rvalue.md  mir-statement.md  mir-surface-syntax.md  mir-syntax.k  mir-syntax.md  mir-terminator.md  mir-type-syntax.md  mir-types.md  mir.k  mir.md  panics.md  rust-std.md
kmir/smoke/: benchmark.parse.const-arithm-simple.out  benchmark.parse.test-binop.out  benchmark.parse.test-sum-to-n.out  benchmark.run.const-arithm-simple.out  benchmark.run.test-binop.out  benchmark.run.test-sum-to-n.out  smoke
kmir/src/kmir/: __init__.py  __main__.py  _prove.py  alloc.py  build.py  cargo.py  cli.py  decoding.py  kast.py  kcfg.py  kmir.py  kmir_cfg.py  kompile.py  kparse.py  kprint.py  linker.py  options.py  parse.py  preprocessor.py  prove.py  pyk_utils.py  run.py  semantics.py  smir.py  tools.py  ty.py  utils.py  value.py
kmir/src/kmir/convert_from_definition/: __main__.py  notes.md  notes.txt  parser.py  v2parser.py
kmir/src/kmir/convert_json/: __main__.py  convert.py  labels.py
kmir/src/kmir/kdist/: plugin.py
kmir/src/kmir/kdist/mir-semantics/: 1.txt  2.txt  abi.k  abi.md  alloc.k  alloc.md  body.k  body.md  cheatcodes.md  config.k  intrinsics.md  kmir-ast.k  kmir-ast.md  kmir.k  kmir.md  lib.k  lib.md  mono.k  mono.md  target.k  target.md  ty.k  ty.md  utils.k
kmir/src/kmir/parse/: __main__.py  notes.md  parser.py
kmir/src/kmir/rust/: __init__.py  cargo.py
kmir/src/kmir/smir/: __init__.py
kmir/src/kmir/testing/: __init__.py  fixtures.py
kmir/src/tests/: conftest.py  sum_to_n3.rs  sum_to_n3_overflow.mir  utils.py
kmir/src/tests/integration/: conftest.py  coverage_matrix.py  rebuild-compiletest-exclude.sh  test_cli.py  test_decode_value.py  test_functions.py  test_integration.py  test_kani.py  test_kmir.py  test_miri_fail.py  test_miri_pass.py  test_parse.py  test_prove.py  test_prove_rs.py  test_run.py  test_run_smir_random.py  test_rustlantis.py  test_ui_run_pass.py  utils.py
kmir/src/tests/integration/proofs/: empty-program.k  lemmas.k  simple-spec.k  simple.mir  simple.rs
kmir/src/tests/integration/test-data/: compiletest-exclude  compiletest-parse-fail.tsv  compiletest-run-fail  compiletest-run-fail.tsv  compiletest-run-pass  handwritten-parse-fail.tsv  handwritten-prove-fail.tsv  handwritten-run-fail.json  handwritten-run-fail.tsv  show-proof
kmir/src/tests/nix/: Makefile  arithm-simple.parse.out  arithm-simple.run.out  nix-tests.sh  sum-to-n.parse.out  sum-to-n.run.out
kmir/src/tests/proofs/: simple-spec.k
kmir/src/tests/unit/: add.add.-------.renumber.0.mir  add.add.006-000.runtime-optimized.after.mir  add.mir  add.rs  test_fixtures.py  test_kmir_hs_only_symbols.py  test_kompile.py  test_linker.py  test_preprocess.py  test_preprocessor.py  test_prove.py  test_smir.py  test_unit.py
kmir/src/tests/unit/compiletest-rs/: README.md
kmir/src/tests/unit/parsing/: README.md  enum.mir  (+1 more)
(+5410 files in other folders)
