[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kmir"
version = "0.3.26"
description = ""
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]

[tool.poetry.scripts]
convert-json = "kmir.convert_json.__main__:main"
convert-from-definition = "kmir.convert_from_definition.__main__:main"
kmir = "kmir.__main__:main"

[tool.poetry.plugins.kdist]
mir-semantics = "kmir.kdist.plugin"

[tool.poetry.plugins.pytest11]
pytest-kmir = "kmir.testing.fixtures"

[tool.poetry.dependencies]
python = "^3.10"
kframework = "7.1.77"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
flake8-type-checking = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyupgrade = "*"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
