[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kmir"
version = "0.3.148"
description = ""
requires-python = "~=3.10"
dependencies = [
    "kframework==v7.1.249",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
parse = "kmir.parse.__main__:main"
kmir = "kmir.__main__:main"

[project.entry-points.kdist]
mir-semantics = "kmir.kdist.plugin"

[project.entry-points.pytest11]
pytest-kmir = "kmir.testing.fixtures"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
